Bug 107241 - Disappear information box for Function on Sidebar
Summary: Disappear information box for Function on Sidebar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.0.0.beta1
Hardware: x86 (IA32) Windows (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-04-18 12:19 UTC by baffclan
Modified: 2017-04-28 12:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Disappeared information box (38.88 KB, image/jpeg)
2017-04-18 12:19 UTC, baffclan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2017-04-18 12:19:43 UTC
Created attachment 132650 [details]
Disappeared information box

Steps to Reproduce:
1. Start LibO-Dev
2. Create Spreadsheet
3. Open Sidebar
4. Click Functions, select a "All" function's list
5. Detach Sidebar

Actual Results:
5. Disappear information box for Function

Expected Results:
5. Appeared information box for Function



Version: 5.4.0.0.alpha0+ (x64)
Build ID: df556aa47da22f96b3fcd356c12419d3035cba3c
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2017-04-13_21:38:58
Locale: ja-JP (ja_JP); Calc: group
Comment 1 Telesto 2017-04-18 17:43:57 UTC
Confirming with
Version: 5.4.0.0.alpha0+
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-04-05_23:32:27
Locale: nl-NL (nl_NL); Calc: CL

and with
Versie: 5.3.0.0.beta1  (x64)
Build ID: 690f553ecb3efd19143acbf01f3af4e289e94536
CPU Threads: 4; Versie besturingssysteem:Windows 6.19; UI Render: standaard; Layout Engine: new; 
Locale: nl-NL (nl_NL); Calc: CL

but not with
Version: 5.3.0.0.alpha1
Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Aron Budea 2017-04-24 00:25:32 UTC Comment hidden (bibisection)
Comment 3 Aron Budea 2017-04-24 00:26:21 UTC
This bug started with the commit referenced below. Adding Cc: to Caolán McNamara, please take a look.

Note that right at the last step (d02e96e0f29c9520c56221473c5bd731600b6e15) the list box was much smaller than normal, but the information box still didn't disappear, so I still considered that good.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a2ba500c70292a33e7b34a6428cc86c17078a72c
author		Caolán McNamara <caolanm@redhat.com>	2016-10-23 19:55:26 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-10-24 12:04:38 (GMT)

"convert function panel to .ui format"
Comment 4 Caolán McNamara 2017-04-27 14:37:40 UTC
reproducible anyway
Comment 5 Commit Notification 2017-04-27 14:58:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e33447a24c6800bbd34ea1463ee823737bf555cd

Resolves: tdf#107241 don't let floating function description grow infinitely

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2017-04-27 15:03:49 UTC
that should do, backport for 5-3 in gerrit
Comment 7 Commit Notification 2017-04-27 21:07:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7f57148258ef407caa3ac81c108f6076caf9b2d&h=libreoffice-5-3

Resolves: tdf#107241 don't let floating function description grow infinitely

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 baffclan 2017-04-28 12:52:11 UTC
Cannot reproduce with LibO-Dev 5.4.0.0.alpha0+(x64)/2017-04-27_21:40:45
Thanks for Fixing this.