Resolves: tdf#107241 don't let floating function description grow infinitely

Change-Id: Ief87c15c637d725d25416b64739fb3f5f07cded4
(cherry picked from commit e33447a24c6800bbd34ea1463ee823737bf555cd)